multi_host/website-multihost-route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: website-gateway
spec:
  selector:
    # Which pods we want to expose as Istio router
    # This label points to the default one installed from file istio-demo.yaml
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # Here we specify which Kubernetes service names
    # we want to serve through this Gateway
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - website-gateway
  http:
  - match:
    - uri:
        prefix: /node
    rewrite:
      uri: /
    route:
    - destination:
        host: website-service.default.svc.cluster.local
        port:
          number: 8501
  - match:
    - uri:
        prefix: /python
    rewrite:
      uri: /
    route:
    - destination:
        host: website-service.default.svc.cluster.local
        port:
          number: 8500
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: website-destination-rule
spec:
  host: website-service
  subsets:
  - name: v1
    labels:
      version: green
